--- a/app/public/home.html
+++ b/app/public/home.html
@@ -19,7 +19,7 @@
         <h2>Answer a few basic questions.</h2>
         <hr class="my-4">
         <h2>Then find the friend with the greatest compatability</h2>
-        <a class="btn btn-primary btn-lg" href="#" role="button"><i class="fas fa-list-ol"></i> Go to survey</a>
+        <a class="btn btn-primary btn-lg" href="/survey" role="button"><i class="fas fa-list-ol"></i> Go to survey</a>
     </div>
 
 
