--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,18 +9,51 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
+    <style>
+        .mb-4 {
+            margin-botton: solid 1px black;
+        }
+    </style>
     <title>FriendFinder: Survey</title>
 </head>
 
 <body>
+   
     <form class="container">
+            <h2 class="mt-3">Survey Questions</h2>
+            <hr>
         <div class="form-group">
-            <label for="exampleFormControlInput1">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <h3><strong>About You</strong></h3>
+            <h5>Name (Required)</h5>
+            <input type="name" class="form-control" id="name" placeholder="required" required>
         </div>
         <div class="form-group">
-            <label for="exampleFormControlSelect1">Example select</label>
-            <select class="form-control" id="exampleFormControlSelect1">
+            <h5>Link to photo image (Required)</h5>
+            <input type="name" class="form-control" id="photo" placeholder="required" required>
+        </div>
+        <hr>
+        <div class="form-group">
+            <label for="formControlSelect1"><h3>Question 1</h3></label>
+            <p>Fight Club</p>
+            <select class="form-control mb-4 border-bottom-dark" id="formControlSelect1">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+            <label for="formControlSelect2"><h3>Question 2</h3></label>
+            <p>Ocean's Eleven</p>
+            <select class="form-control mb-4" id="formControlSelect2">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+            <label for="formControlSelect3"><h3>Question 3</h3></label>
+            <p>12 Monkeys</p>
+            <select class="form-control mb-4" id="formControlSelect3">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
@@ -28,11 +61,10 @@
                 <option>5</option>
             </select>
         </div>
-        <div class="form-group">
-            <label for="exampleFormControlTextarea1">Example textarea</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
+        <button class="btn btn-primary"><i class="fas fa-check-circle"></i> Submit</button>
+        <hr>
     </form>
+    
 
 
 
