--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,18 +9,13 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
-    <style>
-        .mb-4 {
-            margin-botton: solid 1px black;
-        }
-    </style>
     <title>FriendFinder: Survey</title>
 </head>
 
 <body>
    
     <form class="container">
-            <h2 class="mt-3">Survey Questions</h2>
+            <h2 class="mt-3">Survey Questions: Pizza Toppings</h2>
             <hr>
         <div class="form-group">
             <h3><strong>About You</strong></h3>
@@ -33,27 +28,100 @@
         </div>
         <hr>
         <div class="form-group">
-            <label for="formControlSelect1"><h3>Question 1</h3></label>
-            <p>Fight Club</p>
+            <label for="formControlSelect1"><h4><strong>Question 1</strong></h4></label>
+            <p>Cheese</p>
             <select class="form-control mb-4 border-bottom-dark" id="formControlSelect1">
+                <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
                 <option>4</option>
                 <option>5</option>
             </select>
-            <label for="formControlSelect2"><h3>Question 2</h3></label>
-            <p>Ocean's Eleven</p>
+            <label for="formControlSelect2"><h4><strong>Question 2</strong></h4></label>
+            <p>Pepperoni</p>
             <select class="form-control mb-4" id="formControlSelect2">
+                <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
                 <option>4</option>
                 <option>5</option>
             </select>
-            <label for="formControlSelect3"><h3>Question 3</h3></label>
-            <p>12 Monkeys</p>
+            <label for="formControlSelect3"><h4><strong>Question 3</strong></h4></label>
+            <p>Sausage</p>
             <select class="form-control mb-4" id="formControlSelect3">
+                <option selected>Select an Option (1 is gross 5 is awesome)</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+            <label for="formControlSelect4"><h4><strong>Question 4</strong></h4></label>
+            <p>Pineapple</p>
+            <select class="form-control mb-4" id="formControlSelect4">
+                <option selected>Select an Option (1 is gross 5 is awesome)</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+            <label for="formControlSelect5"><h4><strong>Question 5</strong></h4></label>
+            <p>Mushroom</p>
+            <select class="form-control mb-4" id="formControlSelect5">
+                <option selected>Select an Option (1 is gross 5 is awesome)</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+            <label for="formControlSelect6"><h4><strong>Question 6</strong></h4></label>
+            <p>Onion</p>
+            <select class="form-control mb-4" id="formControlSelect6">
+                <option selected>Select an Option (1 is gross 5 is awesome)</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+            <label for="formControlSelect7"><h4><strong>Question 7</strong></h4></label>
+            <p>Bacon</p>
+            <select class="form-control mb-4" id="formControlSelect7">
+                <option selected>Select an Option (1 is gross 5 is awesome)</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+            <label for="formControlSelect8"><h4><strong>Question 8</strong></h4></label>
+            <p>Garlic</p>
+            <select class="form-control mb-4" id="formControlSelect8">
+                <option selected>Select an Option (1 is gross 5 is awesome)</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+            <label for="formControlSelect9"><h4><strong>Question 9</strong></h4></label>
+            <p>Anchovies</p>
+            <select class="form-control mb-4" id="formControlSelect9">
+                <option selected>Select an Option (1 is gross 5 is awesome)</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+            <label for="formControlSelect10"><h4><strong>Question 10</strong></h4></label>
+            <p>Chicken</p>
+            <select class="form-control mb-4" id="formControlSelect10">
+                <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
@@ -61,15 +129,16 @@
                 <option>5</option>
             </select>
         </div>
-        <button class="btn btn-primary"><i class="fas fa-check-circle"></i> Submit</button>
+        <div class="d-flex justify-content-between">
+            <button class="btn btn-primary"><i class="fas fa-check-circle"></i> Submit</button>
+        <a href="/" class="btn btn-secondary" method="POST"><i class="fas fa-home"></i> Home</a>
+        </div>
         <hr>
     </form>
     
-
-
-
-
-
+    <div class="container mb-5">
+        <a href="/api/friends">API Friends List</a> | <a href="https://github.com/cm718/FriendFinder">Github Repo Link</a>
+    </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 crossorigin="anonymous"></script>
