--- a/app/public/home.html
+++ b/app/public/home.html
@@ -19,10 +19,12 @@
         <h2>Answer a few basic questions.</h2>
         <hr class="my-4">
         <h2>Then find the friend with the greatest compatability</h2>
-        <a class="btn btn-primary btn-lg" href="/survey" role="button"><i class="fas fa-list-ol"></i> Go to survey</a>
+        <a class="btn btn-primary btn-lg mt-3" href="/survey" role="button"><i class="fas fa-list-ol"></i> Go to survey</a>
     </div>
 
-
+<div class="container">
+    <a href="/api/friends">API Friends List</a> | <a href="https://github.com/cm718/FriendFinder">Github Repo Link</a>
+</div>
 
 
 
