--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -130,7 +130,7 @@
             </select>
         </div>
         <div class="d-flex justify-content-between">
-            <button class="btn btn-primary"><i class="fas fa-check-circle"></i> Submit</button>
+            <button class="btn btn-primary submit"><i class="fas fa-check-circle"></i> Submit</button>
         <a href="/" class="btn btn-secondary" method="POST"><i class="fas fa-home"></i> Home</a>
         </div>
         <hr>
@@ -146,6 +146,16 @@ crossorigin="anonymous"></script>
 crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
 crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+    $(".submit").on("click", function(event){
+        event.preventDefault();
+
+        
+
+    });
+
+</script>
 </body>
 
 </html>
