Updated survey page with for loop

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -28,9 +28,9 @@
         </div>
         <hr>
         <div class="form-group">
-            <label for="formControlSelect1"><h4><strong>Question 1</strong></h4></label>
+            <label for="q1"><h4><strong>Question 1</strong></h4></label>
             <p>Cheese</p>
-            <select class="form-control mb-4 border-bottom-dark" id="formControlSelect1">
+            <select class="form-control mb-4 border-bottom-dark" id="q1">
                 <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
@@ -38,9 +38,9 @@
                 <option>4</option>
                 <option>5</option>
             </select>
-            <label for="formControlSelect2"><h4><strong>Question 2</strong></h4></label>
+            <label for="q2"><h4><strong>Question 2</strong></h4></label>
             <p>Pepperoni</p>
-            <select class="form-control mb-4" id="formControlSelect2">
+            <select class="form-control mb-4" id="q2">
                 <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
@@ -48,9 +48,9 @@
                 <option>4</option>
                 <option>5</option>
             </select>
-            <label for="formControlSelect3"><h4><strong>Question 3</strong></h4></label>
+            <label for="q3"><h4><strong>Question 3</strong></h4></label>
             <p>Sausage</p>
-            <select class="form-control mb-4" id="formControlSelect3">
+            <select class="form-control mb-4" id="q3">
                 <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
@@ -58,9 +58,9 @@
                 <option>4</option>
                 <option>5</option>
             </select>
-            <label for="formControlSelect4"><h4><strong>Question 4</strong></h4></label>
+            <label for="q4"><h4><strong>Question 4</strong></h4></label>
             <p>Pineapple</p>
-            <select class="form-control mb-4" id="formControlSelect4">
+            <select class="form-control mb-4" id="q4">
                 <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
@@ -68,9 +68,9 @@
                 <option>4</option>
                 <option>5</option>
             </select>
-            <label for="formControlSelect5"><h4><strong>Question 5</strong></h4></label>
+            <label for="q5"><h4><strong>Question 5</strong></h4></label>
             <p>Mushroom</p>
-            <select class="form-control mb-4" id="formControlSelect5">
+            <select class="form-control mb-4" id="q5">
                 <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
@@ -78,9 +78,9 @@
                 <option>4</option>
                 <option>5</option>
             </select>
-            <label for="formControlSelect6"><h4><strong>Question 6</strong></h4></label>
+            <label for="q6"><h4><strong>Question 6</strong></h4></label>
             <p>Onion</p>
-            <select class="form-control mb-4" id="formControlSelect6">
+            <select class="form-control mb-4" id="q6">
                 <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
@@ -88,9 +88,9 @@
                 <option>4</option>
                 <option>5</option>
             </select>
-            <label for="formControlSelect7"><h4><strong>Question 7</strong></h4></label>
+            <label for="q7"><h4><strong>Question 7</strong></h4></label>
             <p>Bacon</p>
-            <select class="form-control mb-4" id="formControlSelect7">
+            <select class="form-control mb-4" id="q7">
                 <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
@@ -98,9 +98,9 @@
                 <option>4</option>
                 <option>5</option>
             </select>
-            <label for="formControlSelect8"><h4><strong>Question 8</strong></h4></label>
+            <label for="q8"><h4><strong>Question 8</strong></h4></label>
             <p>Garlic</p>
-            <select class="form-control mb-4" id="formControlSelect8">
+            <select class="form-control mb-4" id="q8">
                 <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
@@ -108,9 +108,9 @@
                 <option>4</option>
                 <option>5</option>
             </select>
-            <label for="formControlSelect9"><h4><strong>Question 9</strong></h4></label>
+            <label for="q9"><h4><strong>Question 9</strong></h4></label>
             <p>Anchovies</p>
-            <select class="form-control mb-4" id="formControlSelect9">
+            <select class="form-control mb-4" id="q9">
                 <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
@@ -118,9 +118,9 @@
                 <option>4</option>
                 <option>5</option>
             </select>
-            <label for="formControlSelect10"><h4><strong>Question 10</strong></h4></label>
+            <label for="q10"><h4><strong>Question 10</strong></h4></label>
             <p>Chicken</p>
-            <select class="form-control mb-4" id="formControlSelect10">
+            <select class="form-control mb-4" id="q10">
                 <option selected>Select an Option (1 is gross 5 is awesome)</option>
                 <option>1</option>
                 <option>2</option>
@@ -131,7 +131,7 @@
         </div>
         <div class="d-flex justify-content-between">
             <button class="btn btn-primary submit"><i class="fas fa-check-circle"></i> Submit</button>
-        <a href="/" class="btn btn-secondary" method="POST"><i class="fas fa-home"></i> Home</a>
+        <a href="/" class="btn btn-secondary"><i class="fas fa-home"></i> Home</a>
         </div>
         <hr>
     </form>
@@ -142,16 +142,33 @@
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 crossorigin="anonymous"></script>
+<script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
 crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
 crossorigin="anonymous"></script>
 
 <script type="text/javascript">
-    $(".submit").on("click", function(event){
+    $(".submit").on("click", (event) => {
         event.preventDefault();
+       let values = [];
+       
+        for (let i = 1; i <= 10; i++){
+            let val = $(`#q${i}`).val();
+            values.push(val);
+        }
 
-        
+        let submittedData = {
+            name: "",
+            photo: "",
+            values: values
+        };
+        $.post("/api/friends", submittedData, (result) => {
+            console.log(result);
+        });
 
     });
 
